changed unit pt to px

--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@ scroll-behavior: smooth;
 .navbar__container {
     display: flex;
     justify-content: space-between;
-    height: 80pt;
+    height: 80px;
     z-index: 1;
     width: 100%;
     max-width: 1300px;
