--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,7 @@ scroll-behavior: smooth;
 
 
 #navbar__logo {
+    font-family:'Kumbh Sans' , sans-serif;
     background-color: #ff8177;  
     background-image: linear-gradient(to top,#ff0844 0%, #ffb199 100%);
     background-size: 100%;
