--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,7 @@ scroll-behavior: smooth;
 #navbar__logo {
     font-family:'Kumbh Sans' , sans-serif;
     background-color: #ff8177;  
-    background-image: linear-gradient(to top,#ff0844 0%, #ffb199 100%);
+    background-image: linear-gradient(to top,#ff085e 0%, #ff99d1 100%);
     background-size: 100%;
     -webkit-background-clip: text;
     -moz-background-clip: text;
